k8s/minio-tenants/overlays/staging/ingress-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minio-staging.json-server.win
      secretName: minio-console-tls
  rules:
    - host: minio-staging.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9090
